[package]
name = "serverless-discord-interactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serverless-discord-interactions-base = { workspace = true }
serverless-discord-interactions-cloudflare-backend = { workspace = true }
